<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">FlowCrypt</string>
    <string name="support_email" translatable="false">human@flowcrypt.com</string>
    <string name="compose">Compose</string>
    <string name="prompt_subject">Subject</string>
    <string name="prompt_compose_security_email">Compose secure message</string>
    <string name="prompt_compose_standard_email">Compose standard message</string>
    <string name="text_must_not_be_empty">Error: \"%1$s\" must not be empty!</string>
    <string name="send">Send</string>
    <string name="error_email_is_not_valid">Error: invalid email</string>
    <string name="internet_connection_is_not_available">Error: no internet</string>
    <string name="unknown_error">Unknown error</string>
    <string name="privacy">Privacy</string>
    <string name="terms">Terms</string>
    <string name="security">Security</string>
    <string name="security_and_privacy">Security and Privacy</string>
    <string name="connect_your_email_account_to_start_sending_encrypted_messages">Connect your email account\n to send encrypted messages</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="loading">loading</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="log_out">Log out</string>
    <string name="all_labels">All labels</string>
    <string name="no_results">No results</string>
    <string name="set_up_flow_crypt">Set up %1$s</string>
    <plurals name="found_backup_of_your_account_key">
        <item quantity="one">We found a backup of your key</item>
        <item quantity="other">We found backups of %1$d keys</item>
    </plurals>
    <string name="enter_your_pass_phrase">Enter your pass phrase</string>
    <string name="passphrase_must_be_non_empty">Pass phrase cannot be empty</string>
    <string name="your_message_must_be_non_empty">Message should not be empty</string>
    <string name="password_is_incorrect">Incorrect pass phrase, please try again</string>
    <string name="use_another_account">Use another account</string>
    <string name="reply_all">Reply All</string>
    <string name="please_wait_while_backup_will_be_saved">Making a backup, please wait</string>
    <string name="please_wait_while_message_will_be_sent">Sending message, please wait</string>
    <string name="please_wait_while_information_about_recipients_will_be_updated">Loading information about recipients, please wait</string>
    <string name="create_a_new_key">Create a new key</string>
    <string name="import_my_key">Import my key</string>
    <string name="settings">Settings</string>
    <string name="backups">Backups</string>
    <string name="contacts">Contacts</string>
    <string name="keys">Keys</string>
    <string name="attester" translatable="false">Attester</string>
    <string name="legal">Legal</string>
    <string name="help">Help</string>
    <string name="licence">Licence</string>
    <string name="sources">Sources</string>
    <string name="the_contact_was_deleted">Contact \"%1$s\" deleted</string>
    <string name="key_already_added">Key already added. To update the existing key please go to «Settings» -> «Keys» -> «Key details».</string>
    <string name="help_feedback_or_question">Help, feedback, question</string>
    <string name="feedback_thank_you_for_trying_message">Thank you for trying %1$s! We\'re here to help.</string>
    <string name="your_message">Your message</string>
    <string name="see_more_backup_options">See more backup options</string>
    <string name="there_are_no_backups_on_this_account"><b>There are no backups on this account</b>\n\n If you lose your device, or it stops working, your encrypted email will be unreadable.</string>
    <string name="email" translatable="false">Email</string>
    <string name="download">Download</string>
    <string name="backup_as_a_file">backup as a file</string>
    <string name="backup_as_email">backup as email</string>
    <string name="backup_as_download_hint">This will download your key(s) as a file. Very secure option if your device
        is encrypted, or if you can keep a file stored securely. If you lose both your device and the file, your encrypted email will be unreadable, so you need to keep this file in a safe place.</string>
    <string name="backup_as_email_hint">This will back up private key(s) in your Email Inbox. The security depends on
        the strength of your pass phrase, which should be very long and hard to guess. Best option for most users.</string>
    <string name="backups_found">Backups found: %1$d.\n\n Your account is backed up correctly in your Email Inbox.</string>
    <string name="your_key_backup">Your %1$s Backup</string>
    <string name="backed_up_successfully">Backed up successfully</string>
    <string name="backup_was_not_sent">Error backing up, please try again</string>
    <string name="message_was_deleted">The message was deleted</string>
    <string name="message_was_deleted_or_labels_changed">The message was deleted or labels changed</string>
    <string name="retry">Retry</string>
    <string name="warning">Warning</string>
    <string name="no_connection">No connection</string>
    <string name="archive">Archive</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="move_to_inbox">Move to Inbox</string>
    <string name="sending_message_must_not_be_empty">Message should not be empty</string>
    <string name="error_occurred_while_receiving_private_keys">Could not retrieve your private key</string>
    <string name="no_subject">(no subject)</string>
    <string name="error_occurred_please_try_again">Error occurred, please try again</string>
    <string name="user_photo">The user photo</string>
    <string name="template_message_part_public_key_owner">Public Key for %1$s</string>
    <string name="template_message_part_public_key_fingerprint"><![CDATA[(Fingerprint: <font color=\'#B7B7B7\'>%1$s</font>)]]></string>
    <string name="show_the_public_key">Show the Public Key</string>
    <string name="hide_the_public_key">Hide the Public Key</string>
    <string name="import_pub_key">Import public key</string>
    <string name="update_pub_key">Update public key</string>
    <string name="pub_key_successfully_imported">Public key imported</string>
    <string name="pub_key_successfully_updated">Public key updated</string>
    <string name="import_private_key">Import Private Key</string>
    <string name="load_from_a_file">Load from a file</string>
    <string name="load_from_clipboard">Load from clipboard</string>
    <string name="choose_another_key">Choose another key</string>
    <string name="continue_">Continue</string>
    <string name="info">Info</string>
    <string name="hint_clipboard_is_empty">Your clipboard is empty. Please find your %1$s Key where you are storing it, select the text and copy it. After that, return back to %2$s.</string>
    <string name="file_has_wrong_pgp_structure">The content of your file does not look like a valid PGP %1$s Key.</string>
    <string name="source_has_wrong_pgp_structure">The content which you provided does not look like a valid PGP %1$s Key.</string>
    <string name="key_successfully_imported">Key(s) successfully imported</string>
    <string name="the_key_successfully_imported">Key successfully imported</string>
    <string name="attach_file">Attach file</string>
    <string name="switch_to_standard_email">Switch to standard email</string>
    <string name="switch_to_secure_email">Switch to secure email</string>
    <string name="this_message_will_not_be_encrypted">This message will not be encrypted</string>
    <string name="import_their_public_key">Import their Public Key</string>
    <string name="copy_from_other_contact">Copy from other contact</string>
    <string name="template_remove_recipient">Remove %1$s</string>
    <string name="protect_with_password">Protect with password</string>
    <string name="recipient_does_not_use_pgp">Recipient doesn\'t use PGP</string>
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="attachment">Attachment</string>
    <string name="can_not_connect_to_the_server">Cannot connect to the server</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_to_load">Waiting to load</string>
    <string name="download_complete">Download complete</string>
    <string name="template_attachment_already_loading">Attachment \"%1$s\" is already loading</string>
    <string name="can_not_attach_this_file">Can\'t attach this file!</string>
    <string name="template_warning_max_total_attachments_size">Total size of added attachments should be under
        %1$s</string>
    <string name="other_email_provider">Other email provider</string>
    <string name="account_info">Account info</string>
    <string name="e_mail" translatable="false">E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="incoming_mail_settings">Incoming mail settings</string>
    <string name="imap_server">IMAP server</string>
    <string name="imap_port">IMAP port</string>
    <string name="security_type">Security type</string>
    <string name="outgoing_mail_settings">Outgoing mail settings</string>
    <string name="smtp_server">SMTP server</string>
    <string name="smtp_port">SMTP port</string>
    <string name="require_custom_sign_in">Set different credentials for SMTP</string>
    <string name="smtp_username">SMTP Username</string>
    <string name="smtp_password">SMTP Password</string>
    <string name="try_to_connect">Connect</string>
    <string name="template_imap_server" translatable="false">imap.%1$s</string>
    <string name="template_smtp_server" translatable="false">smtp.%1$s</string>
    <string name="none">None</string>
    <string name="ssl_tls" translatable="false">SSL/TLS</string>
    <string name="startls" translatable="false">STARTLS</string>
    <string name="template_email_already_added">The email \"%1$s\" already added!</string>
    <string name="expand_an_account_managment">Expand an account management</string>
    <string name="add_account">Add account</string>
    <string name="skip_remaining_backups">Skip remaining backups</string>
    <string name="experimental">Experimental</string>
    <string name="experimental_settings">Experimental Settings</string>
    <string name="simulate_app_crash">Simulate app crash</string>
    <string name="attachments">Attachments</string>
    <string name="download_attachments_notification_channel">The download attachments notification channel</string>
    <string name="decrypt_error_could_not_open_message">Could not open this message with %1$s.</string>
    <string name="decrypt_error_message_badly_formatted">Message is either badly formatted or not compatible with %1$s.</string>
    <string name="decrypt_error_please_write_me">Please write us at %1$s so that we can fix it for you.</string>
    <string name="search">Search</string>
    <string name="load_only_pgp_messages">Load only PGP messages</string>
    <string name="notifications">Notifications</string>
    <string name="show_public_key">Show public key</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="save_to_file">Save to file</string>
    <string name="report_problem">Report problem</string>
    <string name="include_public_key">Include Public Key</string>
    <string name="mark_unread">Mark unread</string>
    <string name="mark_read">Mark read</string>
    <string name="restart_sending">Restart sending</string>
    <string name="empty_trash">Empty trash</string>
</resources>