<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/menuActionCopy"
        android:icon="@drawable/ic_content_copy_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2000"
        android:title="@string/copy_to_clipboard"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/menuActionSave"
        android:icon="@drawable/ic_save_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2001"
        android:title="@string/save_to_file"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuActionShow"
        android:menuCategory="system"
        android:orderInCategory="2002"
        android:title="@string/show_public_key"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionDelete"
        android:icon="@drawable/ic_delete_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="2003"
        android:title="@string/delete"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionEdit"
        android:menuCategory="system"
        android:orderInCategory="2004"
        android:title="@string/edit"
        android:visible="false"
        app:showAsAction="ifRoom" />
</menu>
