<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-2019 FlowCrypt Limited. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuActionArchiveMessage"
        android:icon="@drawable/ic_archive_white_24dp"
        android:title="@string/archive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionDeleteMessage"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionMoveToInbox"
        android:icon="@drawable/ic_move_to_inbox_white_24dp"
        android:title="@string/move_to_inbox"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menuActionCancelArchiving"
        android:title="@string/cancel_archiving"
        android:visible="false"
        app:showAsAction="never" />
</menu>