<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/buttonPrivacy"
        style="@style/AppWidget.Button.Transparent.MainScreenTopButton"
        android:text="@string/privacy"
        app:layout_constraintEnd_toStartOf="@+id/buttonTerms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonTerms"
        style="@style/AppWidget.Button.Transparent.MainScreenTopButton"
        android:text="@string/terms"
        app:layout_constraintEnd_toStartOf="@+id/buttonSecurity"
        app:layout_constraintStart_toEndOf="@+id/buttonPrivacy"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonSecurity"
        style="@style/AppWidget.Button.Transparent.MainScreenTopButton"
        android:text="@string/security"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonTerms"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintTop_creator="1" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/app_name"
        android:drawablePadding="@dimen/default_margin_medium"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:scaleType="center"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_logo_crypt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonTerms"
        app:srcCompat="@mipmap/logo_flowcrypt" />

    <TextView
        android:id="@+id/textViewConnectYourEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/default_margin_small"
        android:text="@string/connect_your_email_account_to_start_sending_encrypted_messages"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size_big"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.150" />

    <Button
        android:id="@+id/buttonSignInWithGmail"
        style="@style/AppWidget.Button.White.ConnectAccount"
        android:layout_marginTop="@dimen/first_button_padding"
        android:drawableStart="@mipmap/ic_gmail"
        android:text="@string/continue_with_gmail"
        android:theme="@style/AppWidget.Button.White.ConnectAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewConnectYourEmail"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/buttonOtherEmailProvider"
        style="@style/AppWidget.Button.White.ConnectAccount"
        android:layout_marginTop="@dimen/default_margin_big"
        android:drawableStart="@mipmap/ic_email"
        android:text="@string/other_email_provider"
        android:theme="@style/AppWidget.Button.White.ConnectAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignInWithGmail" />

    <Button
        android:id="@+id/buttonHelp"
        style="@style/AppWidget.Button.Transparent.MainScreenTopButton"
        android:layout_marginBottom="@dimen/default_margin_content"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
