<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/menuSearch"
        android:icon="@drawable/ic_search_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="1"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menuEmptyTrash"
        android:icon="@drawable/ic_delete_forever_white_24dp"
        android:menuCategory="system"
        android:orderInCategory="3"
        android:title="@string/empty_trash"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/menuSwitchShowOnlyPgp"
        android:menuCategory="system"
        android:orderInCategory="2"
        android:title="@string/showing_only_pgp_messages"
        app:actionLayout="@layout/action_item_switch"
        app:showAsAction="always" />

    <item
        android:id="@+id/menuForceSending"
        android:icon="@drawable/selector_ic_force_sending"
        android:menuCategory="system"
        android:orderInCategory="1"
        android:title="@string/restart_sending"
        app:showAsAction="always" />
</menu>
